2950/2951 add overlay shade for when popups are active
More attention is brought to the popup and also the search buttons
are disappeared. This makes things look nicer and also ensures ppl
don't try and interact with the buttons behind the popup.

--- a/project/res/layout/fragment_tablet_results_search.xml
+++ b/project/res/layout/fragment_tablet_results_search.xml
@@ -76,6 +76,13 @@
         android:layout_height="match_parent"
         android:visibility="invisible">
 
+        <View
+            android:id="@+id/search_popup_shade"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            android:background="#66000000" />
+
         <LinearLayout
             android:id="@+id/search_popup_content_container"
             android:orientation="horizontal"
