--- a/project/res/layout/fragment_tablet_results_search.xml
+++ b/project/res/layout/fragment_tablet_results_search.xml
@@ -88,7 +88,7 @@
             android:orientation="horizontal"
             android:layout_gravity="bottom|right"
             android:layout_marginRight="12dp"
-            android:layout_marginBottom="12dp"
+            android:layout_marginBottom="6dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
@@ -97,8 +97,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:minHeight="64dp"
-                android:padding="8dp"
-                android:background="@android:color/white">
+                android:paddingLeft="16dp"
+                android:paddingTop="12dp"
+                android:paddingRight="16dp"
+                android:paddingBottom="24dp"
+                android:background="@drawable/bg_tablet_search_results_popup">
 
                 <!-- Calendar popup content -->
 
@@ -107,8 +110,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:visibility="invisible"
-                    android:orientation="horizontal"
-                    android:background="@android:color/white">
+                    android:orientation="horizontal">
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -175,11 +177,14 @@
                 android:gravity="center_vertical"
                 android:drawablePadding="8dp"
                 android:drawableLeft="@drawable/ic_overview_checkmark"
-                android:padding="8dp"
+                android:paddingLeft="16dp"
+                android:paddingTop="12dp"
+                android:paddingRight="16dp"
+                android:paddingBottom="24dp"
                 android:text="@string/done"
                 android:textAllCaps="true"
                 android:textSize="18dp"
-                android:background="@color/divider_grey" />
+                android:background="@drawable/bg_tablet_search_results_popup_done" />
 
         </LinearLayout>
 
