--- a/project/res/layout/fragment_tablet_results_search.xml
+++ b/project/res/layout/fragment_tablet_results_search.xml
@@ -87,8 +87,8 @@
             android:id="@+id/search_popup_content_container"
             android:orientation="horizontal"
             android:layout_gravity="bottom|right"
-            android:layout_marginRight="12dp"
-            android:layout_marginBottom="6dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="4dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
@@ -98,9 +98,9 @@
                 android:layout_height="wrap_content"
                 android:minHeight="64dp"
                 android:paddingLeft="16dp"
-                android:paddingTop="12dp"
+                android:paddingTop="24dp"
                 android:paddingRight="16dp"
-                android:paddingBottom="24dp"
+                android:paddingBottom="32dp"
                 android:background="@drawable/bg_tablet_search_results_popup">
 
                 <!-- Calendar popup content -->
@@ -115,43 +115,38 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:layout_marginRight="16dp">
+                        android:orientation="vertical">
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:text="@string/trip_starts"
-                            android:textAllCaps="true" />
+                        <com.expedia.bookings.widget.TextView
+                            style="@style/V2.Widget.TextView.TabletSearch.PopupTripDatesHeader"
+                            android:text="@string/trip_starts" />
 
                         <EditText
                             android:id="@+id/popup_start_date"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:minWidth="96dp"
-                            android:focusable="false" />
+                            style="@style/V2.Widget.TextView.TabletSearch.PopupFakeEditText" />
 
                     </LinearLayout>
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginRight="16dp"
+                        android:src="@drawable/ic_tablet_search_results_popup_arrow"/>
 
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:text="@string/trip_ends"
-                            android:textAllCaps="true" />
+                        <com.expedia.bookings.widget.TextView
+                            style="@style/V2.Widget.TextView.TabletSearch.PopupTripDatesHeader"
+                            android:text="@string/trip_ends" />
 
                         <EditText
                             android:id="@+id/popup_end_date"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:minWidth="96dp"
-                            android:focusable="false"
+                            style="@style/V2.Widget.TextView.TabletSearch.PopupFakeEditText"
                             android:hint="@string/trip_end_optional" />
 
                     </LinearLayout>
@@ -170,20 +165,23 @@
 
             </FrameLayout>
 
+            <!-- Done button -->
+
             <TextView
                 android:id="@+id/search_popup_done"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
                 android:drawablePadding="8dp"
-                android:drawableLeft="@drawable/ic_overview_checkmark"
+                android:drawableLeft="@drawable/ic_tablet_search_results_popup_done_check"
                 android:paddingLeft="16dp"
-                android:paddingTop="12dp"
+                android:paddingTop="24dp"
                 android:paddingRight="16dp"
-                android:paddingBottom="24dp"
+                android:paddingBottom="32dp"
                 android:text="@string/done"
                 android:textAllCaps="true"
-                android:textSize="18dp"
+                android:textColor="@color/tablet_results_search_blue"
+                android:textSize="14dp"
                 android:background="@drawable/bg_tablet_search_results_popup_done" />
 
         </LinearLayout>
