--- a/project/res/values/tablet_themes.xml
+++ b/project/res/values/tablet_themes.xml
@@ -173,6 +173,15 @@
         <item name="android:orientation">horizontal</item>
     </style>
 
+    <style name="V2.Widget.LinearLayout.TabletSearchRightButtonsContainer">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:layout_weight">0</item>
+        <item name="android:layout_gravity">center_vertical|right</item>
+    </style>
+
     <!-- TextView styling -->
 
     <style name="V2.Widget.TextView" />
@@ -192,13 +201,28 @@
         <item name="android:drawableLeft">@drawable/ic_action_bar_magnifying_glass</item>
     </style>
 
-    <style name="V2.Widget.LinearLayout.TabletSearchRightButtonsContainer">
+    <style name="V2.Widget.TextView.TabletSearch" />
+
+    <style name="V2.Widget.TextView.TabletSearch.PopupTripDatesHeader">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:orientation">horizontal</item>
-        <item name="android:gravity">center_vertical</item>
-        <item name="android:layout_weight">0</item>
-        <item name="android:layout_gravity">center_vertical|right</item>
+        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:layout_marginLeft">12dp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textSize">13dp</item>
+        <item name="android:textColor">#99000000</item>
+        <item name="textStyle">medium</item>
+    </style>
+
+    <style name="V2.Widget.TextView.TabletSearch.PopupFakeEditText">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:textColor">#333333</item>
+        <item name="android:textColorHint">#B3404040</item>
+        <item name="textStyle">medium</item>
+        <item name="android:focusable">false</item>
+        <item name="android:minWidth">128dp</item>
     </style>
 
     <style name="V2.Widget.TextView.RateButton">
