--- a/project/res/layout/fragment_tablet_results_search.xml
+++ b/project/res/layout/fragment_tablet_results_search.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
@@ -167,7 +168,7 @@
 
             <!-- Done button -->
 
-            <TextView
+            <com.expedia.bookings.widget.TextView
                 android:id="@+id/search_popup_done"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -176,13 +177,14 @@
                 android:drawableLeft="@drawable/ic_tablet_search_results_popup_done_check"
                 android:paddingLeft="16dp"
                 android:paddingTop="24dp"
-                android:paddingRight="16dp"
+                android:paddingRight="24dp"
                 android:paddingBottom="32dp"
                 android:text="@string/done"
                 android:textAllCaps="true"
                 android:textColor="@color/tablet_results_search_blue"
                 android:textSize="14dp"
-                android:background="@drawable/bg_tablet_search_results_popup_done" />
+                app:textStyle="bold"
+                android:background="@drawable/bg_tablet_search_results_popup_done_btn" />
 
         </LinearLayout>
 
