--- a/project/res/values-sw600dp/colors.xml
+++ b/project/res/values-sw600dp/colors.xml
@@ -1,4 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Tablet colors -->
+    <color name="tablet_launch_bg">#1b2747</color>
+    <color name="tablet_grey_pane_bg">#f2f2f2</color>
+    <color name="tablet_white_pane_bg">#ffffff</color>
+    <color name="tablet_results_ab_default">@android:color/transparent</color>
+    <color name="tablet_results_ab_flights">#142B42</color>
+    <color name="tablet_bg_tiles_blend">#232c45</color>
+    <color name="details_ring_red">#bc4649</color>
+    <color name="details_ring_blue">#286cb5</color>
+    <color name="details_ring_gray">#cbcfd2</color>
+    <color name="details_ring_text">#4b556b</color>
+    <color name="sliding_group_text_bright">#f4f5f7</color>
+    <color name="sliding_group_text_dim">#4a4f54</color>
+    <color name="hotel_details_sticky_header_background">#4e4e52</color>
+    <color name="hotel_room_rate_select_room_button">#145999</color>
+    <color name="hotel_room_rate_select_room_button_pressed">#0d3861</color>
+    <color name="hotel_room_rate_add_room_button">#e4822a</color>
+    <color name="hotel_room_rate_add_room_button_pressed">#ab601f</color>
+    <color name="trip_bucket_background_color">#dbdada</color>
+    <color name="tablet_collection_back_image_overlay">#e5141d36</color>
+    <color name="tablet_collection_middle_image_overlay">#b2141d36</color>
+
+    <!-- Tablet results -->
+    <color name="tablet_results_search_blue">#3d6a99</color>
+
+    <!-- Hotels colors -->
     <color name="amenity_icon_color">#4c6680</color>
+
+    <!-- Tablet flights -->
+    <color name="tablet_flight_filter_text_color">#4c5156</color>
+    <color name="tablet_flight_trip_view_airport_text_color">#aaffffff</color>
+    <color name="tablet_flight_details_primary_text_color">#4c4c4c</color>
+
+    <color name="tablet_flight_histogram_green">#A3A2D104</color>
+    <color name="tablet_flight_histogram_yellow">#A3F7DE08</color>
+    <color name="tablet_flight_histogram_orange">#A3FF9900</color>
+    <color name="tablet_flight_histogram_red">#A3C42126</color>
+
+    <!-- Tablet Checkout -->
+    <color name="tablet_checkout_light">#E5E6E5</color>
+    <color name="tablet_checkout_dark">#464D51</color>
+
+    <!-- Tablet Confirmation Action Buttons -->
+    <color name="tablet_confirmation_actionbutton_pressed">#20000000</color>
+
+    <!-- Tablet Room Rate More Info button -->
+    <color name="tablet_room_rate_more_info_pressed">#20000000</color>
+
 </resources>
