--- a/project/res/layout/activity_tablet_results.xml
+++ b/project/res/layout/activity_tablet_results.xml
@@ -24,6 +24,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <View
+        android:id="@+id/overview_shade"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#66000000"
+        android:visibility="gone" />
+
     <!-- TRIP BUCKET -->
     <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/trip_bucket_container"
