--- a/project/res/layout/widget_hotel_receipt.xml
+++ b/project/res/layout/widget_hotel_receipt.xml
@@ -147,7 +147,7 @@
                     android:layout_below="@+id/price_text"
                     android:drawablePadding="6dp"
                     android:drawableRight="@drawable/ic_info_receipt"
-                    android:text="@string/grand_total"
+                    android:text="@string/total_with_tax"
                     android:textColor="@color/hotel_mini_receipt_price_text"
                     android:textSize="12sp" />
 
