--- a/project/res/layout/fragment_tablet_results_search.xml
+++ b/project/res/layout/fragment_tablet_results_search.xml
@@ -117,7 +117,8 @@
 
                         <EditText
                             android:id="@+id/popup_start_date"
-                            style="@style/V2.Widget.TextView.TabletSearch.PopupFakeEditText" />
+                            style="@style/V2.Widget.TextView.TabletSearch.PopupFakeEditText"
+                            android:hint="@string/select_dates"/>
 
                     </LinearLayout>
 
