--- a/project/res/layout/snippet_tablet_hotel_gallery_item.xml
+++ b/project/res/layout/snippet_tablet_hotel_gallery_item.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent"
-    android:clipChildren="false" >
+    android:layout_height="match_parent" >
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_gravity="center"
-        android:scaleType="center" />
+        android:scaleType="centerCrop" />
 
 </FrameLayout>
