2689: Cleanup image gallery gutter
I just compute it at runtime now. Trying to set good looking values for
7inch and 10inch for landscape and portrait was driving me nuts. This is
much nicer.

--- a/project/res/layout/fragment_tablet_hotel_gallery.xml
+++ b/project/res/layout/fragment_tablet_hotel_gallery.xml
@@ -59,9 +59,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:clipChildren="false"
-            android:paddingLeft="@dimen/tablet_gallery_viewpager_padding"
-            android:paddingRight="@dimen/tablet_gallery_viewpager_padding" />
+            android:clipChildren="false" />
 
     </LinearLayout>
 
