--- a/project/res/layout/fragment_results_waypoint_search.xml
+++ b/project/res/layout/fragment_results_waypoint_search.xml
@@ -15,7 +15,7 @@
         android:id="@+id/search_bar_container"
         android:layout_width="@dimen/tablet_search_width"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="23dp"
         android:layout_marginBottom="16dp"
         android:animateLayoutChanges="true"
         android:layout_centerHorizontal="true"
@@ -61,7 +61,7 @@
                     android:scaleType="centerCrop"
                     android:layout_width="@dimen/tablet_search_header_height"
                     android:layout_height="@dimen/tablet_search_header_height"
-                    android:src="@drawable/ic_clear_edittext" />
+                    android:src="@drawable/search_box_clear" />
 
             </LinearLayout>
 
@@ -93,14 +93,15 @@
 
     <FrameLayout
         android:id="@+id/suggestions_container"
-        android:layout_below="@id/search_bar_container"
-        android:background="#66000000"
         android:layout_width="@dimen/tablet_search_width"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_below="@id/search_bar_container"
         android:layout_centerHorizontal="true"
-        android:paddingTop="8dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/bg_place_suggestions"
         android:paddingLeft="8dp"
-        android:paddingRight="8dp" />
+        android:paddingRight="8dp"
+        android:paddingTop="8dp" />
 
 </RelativeLayout>
