--- a/project/res/layout/row_suggestion_dropdown.xml
+++ b/project/res/layout/row_suggestion_dropdown.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.expedia.bookings.widget.TextView
     android:id="@android:id/text1"
     style="?android:attr/dropDownItemStyle"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="48dp"
-    android:drawablePadding="16dp"
+    android:layout_marginLeft="2dp"
+    android:drawablePadding="3dp"
     android:singleLine="true"
     android:textAppearance="?android:attr/textAppearanceLargePopupMenu"
     android:textColor="#F3F3F3"
-    android:textSize="15dp" />
+    android:textSize="17sp"
+    app:textStyle="light" />
