--- a/project/res/layout/fragment_tablet_checkout_forms.xml
+++ b/project/res/layout/fragment_tablet_checkout_forms.xml
@@ -25,6 +25,15 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+                <FrameLayout
+                    android:id="@+id/horizontal_trip_bucket_item"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/tablet_checkout_trip_bucket_expanded_item_height"
+                    android:layout_marginTop="@dimen/tablet_checkout_form_padding_x"
+                    android:paddingLeft="@dimen/tablet_checkout_form_padding_x"
+                    android:paddingRight="@dimen/tablet_checkout_form_padding_x"
+                    android:visibility="gone" />
+
                 <LinearLayout
                     android:id="@+id/checkout_forms_container"
                     android:layout_width="match_parent"
