--- a/project/res/values-sw600dp-port/dimens.xml
+++ b/project/res/values-sw600dp-port/dimens.xml
@@ -38,6 +38,7 @@
 
     <!-- Checkout -->
     <dimen name="tablet_checkout_data_form_width">@dimen/match_parent</dimen>
+    <dimen name="tablet_checkout_trip_bucket_expanded_item_height">234dp</dimen>
     <dimen name="tablet_checkout_trip_bucket_header_height">60dp</dimen>
 
 </resources>
