--- a/project/res/values/styles.xml
+++ b/project/res/values/styles.xml
@@ -1012,6 +1012,7 @@
     <style name="MapPinUpperTextAppearance">
         <item name="android:textColor">@color/actionbar_text</item>
         <item name="android:textSize">20dp</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="MapPinLowerTextAppearance">
