[LaunchMapV2] Replaced SVG map with Google Map

--- a/project/res/layout/fragment_tablet_launch_pin_detail.xml
+++ b/project/res/layout/fragment_tablet_launch_pin_detail.xml
@@ -64,20 +64,22 @@
     <!-- Keep this so we can animate the ImageView to this target -->
     <View
         android:id="@+id/round_image_target"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="@dimen/launch_pin_detail_size"
+        android:layout_height="@dimen/launch_pin_detail_size"
         android:layout_centerVertical="true"
         android:layout_toLeftOf="@id/center"
-        android:layout_marginRight="130dp" />
+        android:layout_marginRight="130dp"
+        android:padding="@dimen/launch_pin_detail_padding"/>
 
     <!-- Keep this on top, in the z-order, for animation -->
     <com.expedia.bookings.widget.RoundImageView
         android:id="@+id/round_image"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="@dimen/launch_pin_detail_size"
+        android:layout_height="@dimen/launch_pin_detail_size"
         android:layout_centerVertical="true"
         android:layout_toLeftOf="@id/center"
         android:layout_marginRight="130dp"
+        android:padding="@dimen/launch_pin_detail_padding"
         android:scaleType="fitCenter" />
 
 </RelativeLayout>
