--- a/project/res/values-sw600dp/colors.xml
+++ b/project/res/values-sw600dp/colors.xml
@@ -7,6 +7,7 @@
 
     <!-- Tablet Launch Screen -->
     <color name="tablet_launch_bg">#1b2747</color>
+    <color name="tablet_launch_map_overlay">#66131f40</color>
     <color name="tablet_bg_tiles_blend">#232c45</color>
     <color name="tablet_collection_back_image_overlay">#e5141d36</color>
     <color name="tablet_collection_middle_image_overlay">#b2141d36</color>
