--- a/project/res/drawable/bg_tablet_bottom_fade.xml
+++ b/project/res/drawable/bg_tablet_bottom_fade.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list
-	xmlns:android="http://schemas.android.com/apk/res/android">
-	<item>
-		<shape
-			android:shape="rectangle">
-			<gradient
-				android:startColor="#000000"
-				android:endColor="#00000000"
-				android:angle="90" />
-		</shape>
-	</item>
-</layer-list>
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+
+    <gradient
+        android:startColor="#000f1526"
+        android:centerColor="#b20f1526"
+        android:endColor="#ff0f1526"
+        android:angle="270"/>
+
+</shape>
