--- a/project/res/layout/snippet_tablet_launch_map_pin.xml
+++ b/project/res/layout/snippet_tablet_launch_map_pin.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.expedia.bookings.widget.LaunchPin xmlns:android="http://schemas.android.com/apk/res/android"
+<com.expedia.bookings.widget.LaunchPin
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
@@ -7,7 +8,9 @@
         android:id="@+id/launch_pin_image_view"
         android:layout_width="@dimen/launch_pin_size"
         android:layout_height="@dimen/launch_pin_size"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:padding="@dimen/launch_pin_padding"
+        android:background="@drawable/launch_circle_shadow"/>
 
     <com.expedia.bookings.widget.TextView
         android:id="@+id/launch_pin_text_view"
@@ -15,6 +18,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/launch_pin_size"
         android:layout_gravity="center_horizontal|bottom"
-        android:gravity="center" />
+        android:gravity="center"/>
 
 </com.expedia.bookings.widget.LaunchPin>
