--- a/project/res/layout/fragment_tablet_checkout_forms.xml
+++ b/project/res/layout/fragment_tablet_checkout_forms.xml
@@ -28,7 +28,7 @@
                 <FrameLayout
                     android:id="@+id/horizontal_trip_bucket_item"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/tablet_checkout_trip_bucket_expanded_item_height"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/tablet_checkout_form_padding_x"
                     android:paddingLeft="@dimen/tablet_checkout_form_padding_x"
                     android:paddingRight="@dimen/tablet_checkout_form_padding_x"
