--- a/project/res/layout/fragment_tablet_horizontal_trip_bucket_item.xml
+++ b/project/res/layout/fragment_tablet_horizontal_trip_bucket_item.xml
@@ -4,75 +4,97 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal" >
+    android:orientation="vertical" >
 
-    <!-- Left Image -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
 
-    <com.expedia.bookings.widget.OptimizedImageView
-        android:id="@+id/tripbucket_card_background_view"
-        android:layout_width="276dp"
-        android:layout_height="match_parent"
-        android:scaleType="fitCenter"/>
+        <!-- Left Image -->
 
-    <!-- Expanded / receipt Part -->
+        <com.expedia.bookings.widget.OptimizedImageView
+            android:id="@+id/tripbucket_card_background_view"
+            android:layout_width="276dp"
+            android:layout_height="@dimen/tablet_checkout_trip_bucket_expanded_item_height"
+            android:scaleType="fitCenter"/>
 
-    <FrameLayout
-        android:id="@+id/trip_bucket_item_expanded_container"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:background="#ffffff" />
+        <!-- Expanded / receipt Part -->
 
-    <FrameLayout
-        android:id="@+id/trip_bucket_item_price_change_clip_container"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content">
+        <FrameLayout
+            android:id="@+id/trip_bucket_item_expanded_container"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/tablet_checkout_trip_bucket_expanded_item_height"
+            android:layout_weight="1"
+            android:background="#ffffff" />
 
-        <LinearLayout
-            android:id="@+id/price_change_notification_container"
-            android:layout_width="match_parent"
+    </LinearLayout>
+
+
+    <!-- Price change -->
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <Space
+            android:layout_width="276dp"
+            android:layout_height="wrap_content" />
+
+        <FrameLayout
+            android:id="@+id/trip_bucket_item_price_change_clip_container"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/little_up_arrow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="30dp"
-                android:layout_gravity="right"
-                android:adjustViewBounds="true"
-                android:src="@drawable/bg_price_alert_arrow"/>
-
-            <View
-                android:id="@+id/grey_bar"
-                android:layout_width="match_parent"
-                android:layout_height="5dp"
-                android:background="#BFBFBF"/>
+            android:layout_weight="1" >
 
             <LinearLayout
+                android:id="@+id/price_change_notification_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@android:color/white"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:padding="10dp">
+                android:layout_gravity="right"
+                android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/exclaimation"
+                    android:id="@+id/little_up_arrow"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
+                    android:layout_marginRight="30dp"
+                    android:layout_gravity="right"
                     android:adjustViewBounds="true"
-                    android:src="@drawable/ic_price_alert_exclamation"/>
+                    android:src="@drawable/bg_price_alert_arrow"/>
 
-                <TextView
-                    android:id="@+id/price_change_notification_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                <View
+                    android:id="@+id/grey_bar"
+                    android:layout_width="match_parent"
+                    android:layout_height="5dp"
+                    android:background="#BFBFBF"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/white"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:padding="10dp">
+
+                    <ImageView
+                        android:id="@+id/exclaimation"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="10dp"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/ic_price_alert_exclamation"/>
+
+                    <TextView
+                        android:id="@+id/price_change_notification_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
 
-    </FrameLayout>
+        </FrameLayout>
+
+    </LinearLayout>
 
 </LinearLayout>
